# -A-variable-leglength-bipedal-wheeled-robot-using-a-combined-LQR-Fuzzy-control-approach

./: README.md
Gazebo/src/: CMakeLists.txt  package.xml
Gazebo/src/config/: controllers.yaml
Gazebo/src/launch/: balance_control.launch  display.launch  gazebo.launch
Gazebo/src/meshes/: base_link.STL  left_wheel.STL  right_wheel.STL
Gazebo/src/scripts/: lqr_balance_controller.py
Gazebo/src/urdf/: robotcanbang_1.csv  robotcanbang_1.urdf
Matlab/: LQG_Con_lac_nguoc.slx  code tim lc.m  code tìm ma trận K.m
